# Libefaxx

./: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
cmake/: packages.cmake
experiments/: CMakeLists.txt  README.md
experiments/affinity/: CMakeLists.txt  README.md  main.cc
experiments/all2all/: CMakeLists.txt  README.md  main.cu  srun.sh
experiments/all2all/include/all2all/: all2all.cuh  arguments.h
experiments/bootstrap/: CMakeLists.txt  README.md  main.cc  srun.sh
experiments/echo/: CMakeLists.txt  README.md  main.cc
experiments/efa/: CMakeLists.txt  README.md  main.cc
experiments/ipc/: CMakeLists.txt  main.cu  srun.sh
experiments/proxy/: CMakeLists.txt  README.md  main.cu  srun.sh
experiments/queue/: CMakeLists.txt  README.md  main.cu  srun.sh
experiments/sendrecv/: CMakeLists.txt  README.md  main.cu  srun.sh
experiments/sendrecv/include/sendrecv/: arguments.h  sendrecv.cuh
experiments/shmem/: CMakeLists.txt  main.cu  srun.sh
experiments/write/: CMakeLists.txt  README.md  main.cu  srun.sh
experiments/write/include/write/: arguments.h  write.cuh
src/: CMakeLists.txt  handle.cc  selector.cc
src/include/affinity/: affinity.h
src/include/bench/: arguments.h  print.h
src/include/bench/modules/: all2all.cuh  gin.cuh  ipc.cuh  proxy.cuh  sendrecv.cuh  write.cuh
src/include/bench/mpi/: bench.cuh  fabric.cuh  ib.cuh
src/include/bootstrap/mpi/: fabric.h  ib.h  mpi.h
src/include/device/: common.cuh
src/include/io/: awaiter.h  client.h  coro.h  defer.h  event.h  future.h  handle.h  io.h  progress.h  runner.h  selector.h  server.h  sleep.h  stream.h
src/include/queue/: queue.cuh
src/include/rdma/: buffer.h  channel.h  context.h  efa.h  memory.h  proxy.h  request.h  selector.h  symmetric.h
src/include/rdma/fabric/: backend.h  buffer.h  channel.h  context.h  efa.h  memory.h  request.h  selector.h
src/include/rdma/ib/: backend.h  buffer.h  channel.h  context.h  efa.h  ib.h  memory.h  request.h  selector.h
src/include/shmem/: shmem.cuh
tests/: CMakeLists.txt
tests/io/: CMakeLists.txt  io_test.cc
tests/queue/: CMakeLists.txt  queue_test.cu
